--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13,11 +13,75 @@ body{
 }
 header{
     width: 20%;
+    display:grid;
 }
+
+.container-header{
+    margin-top:2rem;
+}
+
+.logosena{
+    width: 5rem;
+    margin-left: 6.5rem;
+   
+}
+
+
 main{
-    width: 80%;
+    width: 100%;
     background-color: var(--color-bg-2);
+    display: flex;
+    flex-direction: column;
+    align-items: center !important;
 }
+
+.conteiner{
+    height: 100%;
+}
+
+.contenido{
+    width:100%;
+    padding: 1rem;
+    margin-top: 2rem;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#header {
+    transition: opacity 0.5s ease, width 0.5s ease; /* Transición suave de 0.5 segundos */
+  }
+  
+  .ocultar {
+    opacity: 0; /* Oculta el div */
+    width: 0; /* Establece el ancho a 0 para ocultarlo completamente */
+    overflow: hidden; /* Oculta cualquier contenido que pueda desbordar */
+  }
+
+nav{
+    width:90%;
+    height: 3rem;
+    border-radius: 10px;
+    margin-top: 2rem;
+    background-color: #EFEFEF;
+    font-size: 1.5rem;
+    display: flex;
+    align-items: center;
+    justify-content:space-between;
+    padding-left: 10px;
+
+}
+
+nav p{
+    margin-top: 10px;
+}
+
+nav i{
+    margin-right: 1rem;
+}
+
+
 a{
     text-decoration: none;
     color: black;
@@ -27,3 +91,48 @@ hr{
     width: 180px;
     height: 4px;
 }
+
+
+@media (max-width: 767px) {
+  
+
+
+    header{
+        width: 20%;
+        font-size: 10px;
+       
+    }
+
+    .conteiner{
+        height: auto;
+    }    
+
+    .container-header{
+        margin-top: 2rem !important ;
+       gap: 1.2rem !important;
+       width: 5rem !important;
+    }
+
+    .logosena{
+        width: 3rem;
+        margin-left: 1rem;
+       
+    }
+
+    .container-link{
+        align-items:start !important;
+        gap: 13px !important;
+    }
+
+    .container-link a{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+    }
+    hr{
+        width: 5rem !important;
+    }
+
+  }
